# Snake

./: CMakeLists.txt  Gra.sln  README.md
Gra/: CMakeLists.txt  Enemies.cpp  Enemies.h  Game.cpp  Game.h  Gra.vcxproj  Gra.vcxproj.filters  Object.cpp  Object.h  Player.cpp  Player.h  Snake.cpp  Snake.h  main.cpp
Gra/Dependencies/: CMakeLists.txt
Gra/Dependencies/SFML/: CMakeLists.txt
Gra/build_win64/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake
Gra/source/: CMakeLists.txt
